@@ -4,6 +4,7 @@
         <file>layouts/overlapping-item.json</file>
         <file>layouts/unsupported-serialization-version.json</file>
         <file>layouts/stuck-separator.json</file>
+        <file>layouts/layoutEquallyCrash.json</file>
         <file>main.qml</file>
     </qresource>
 </RCC>
